# dr-disease-classification-mvp

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/src/retina_api/: __init__.py  app.py
backend/src/retina_api/api/: __init__.py  dependencies.py  routes.py  schemas.py  serializers.py
backend/src/retina_api/core/: settings.py
backend/src/retina_api/db/: models.py  session.py
backend/src/retina_api/ml/: __init__.py  ensemble.py  ereg_graph.py  explanation.py  gradcam.py  inference.py  model_loader.py  patch_mil.py  preprocessing.py  runtime_device.py  sample_data.py  tf_bootstrap.py  thresholds.py
backend/tests/: conftest.py  test_ai_explanation.py  test_api_routes.py  test_ensemble.py  test_inference.py  test_model_loader.py  test_package_layout.py  test_patch_mil.py  test_preprocessing.py  test_runtime_device.py  test_sample_data.py  test_tf_bootstrap.py  test_thresholds.py
frontend/: index.html  package-lock.json
frontend/src/api/: cases.ts  client.ts  types.ts
frontend/src/app/: App.tsx  ErrorBoundary.tsx
frontend/src/features/cases/components/: GradcamEvidenceSection.tsx  HistoryStatusPanel.tsx  HistoryTable.tsx  PatientDetailsFields.tsx  PredictionSummary.tsx  ProbabilityList.tsx  RuntimeStatusCard.tsx  SourceImageSection.tsx  UploadPanel.tsx
frontend/src/styles/: index.css
runtime/: README.md
runtime/notebook-artifacts/ensemble/: final_ensemble_recipe.json
runtime/notebook-artifacts/thresholds/: attention_thresholds.json  lesion_thresholds.json  multiscale_thresholds.json  patch_mil_thresholds.json
(+3 files in other folders)
