[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "retina-api"
version = "0.1.0"
description = "FastAPI backend for dynamic diabetic retinopathy grading."
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi",
  "uvicorn",
  "sqlalchemy",
  "pydantic",
  "python-multipart",
  "numpy",
  "opencv-python",
  "tensorflow",
  "keras",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
